fix: z-index

--- a/src/notify/index.scss
+++ b/src/notify/index.scss
@@ -22,7 +22,7 @@
     top: 16px;
     right: 0;
     pointer-events: none;
-    z-index: 2000;
+    z-index: 2060;
   }
 
   &-content {
